manifests/k8s-gateway/Namespace-k8s-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: k8s-gateway
