manifests/k8s-gateway/Deployment-k8s-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: k8s-gateway
    app.kubernetes.io/name: k8s-gateway
  name: k8s-gateway
  namespace: k8s-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: k8s-gateway
      app.kubernetes.io/name: k8s-gateway
  template:
    metadata:
      annotations:
        checksum/config: 5f2e9432f1d4b964f2debb3a98206d28b7e4a1078e9aeda9f582803407369b16
      labels:
        app.kubernetes.io/instance: k8s-gateway
        app.kubernetes.io/name: k8s-gateway
    spec:
      containers:
        - args:
            - -conf
            - /etc/coredns/Corefile
          image: codeberg.org/k8s-gateway/k8s_gateway:1.8.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            successThreshold: 1
            timeoutSeconds: 5
          name: k8s-gateway
          ports:
            - containerPort: 1053
              name: dns-udp
              protocol: UDP
            - containerPort: 9153
              name: metrics
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /ready
              port: 8181
              scheme: HTTP
            initialDelaySeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources: {}
          securityContext:
            runAsUser: 1000
          volumeMounts:
            - mountPath: /etc/coredns
              name: config-volume
      securityContext: {}
      serviceAccountName: k8s-gateway
      volumes:
        - configMap:
            items:
              - key: Corefile
                path: Corefile
            name: k8s-gateway
          name: config-volume
