manifests/k8s-gateway/Service-k8s-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9153"
    prometheus.io/scrape: "true"
    tailscale.com/hostname: k8s-dns
    tailscale.com/tags: tag:dns
  labels:
    app.kubernetes.io/instance: k8s-gateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: k8s-gateway
    tailscale.com/proxy-class: prod
  name: k8s-gateway
  namespace: k8s-gateway
spec:
  loadBalancerClass: tailscale
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: dns-udp
  selector:
    app.kubernetes.io/instance: k8s-gateway
    app.kubernetes.io/name: k8s-gateway
  type: LoadBalancer
